--- a/merkury/index.html
+++ b/merkury/index.html
@@ -20,7 +20,7 @@
                         <span class="my-auto">&#9776;</span>
                     </button>
 
-    		        <a style="z-index: 10" href="#"><img class="logo" src="img/logo.svg" alt=""></a>
+    		        <a style="z-index: 10" href="#"><img class="logo" src="img/Logo.svg" alt=""></a>
 
                   <div class="menu animated collapse navbar-collapse ml-auto" id="nav-top">
                         <button style="z-index: 10" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#nav-top" aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
