--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -211,7 +211,7 @@
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-      <a class="btn btn-light btn-xl" href="">Download Now!</a>
+      <a class="btn btn-light btn-xl" href="#">Download Now!</a>
     </div>
   </section>
 
