--- a/merkury/index.html
+++ b/merkury/index.html
@@ -269,7 +269,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
     <footer>
         <div class="container">
             <div class="d-flex flex-wrap">
-                <p class="description mt-0">© 2016 Merkury All Right Reserved </p>
+                <p class="description mt-0">Copyright © 2020 - Zack</p>
 
                 <nav class="menu ml-auto mt-1">    
                     <a href="#">Pricing </a>
@@ -280,7 +280,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                 <div class="socials d-flex">
                     <a href="#"><img src="img/facebook-f-brands.svg" alt=""></a>
                     <a href="#"><img src="img/twitter-brands.svg" alt=""></a>
-                    <a href="#"><img class="google"  src="img/google-brands.svg" alt=""></a>
+                    <a href="#"><img class="google" src="img/google-brands.svg" alt=""></a>
                 </div>
             </div>
         </div>
@@ -290,6 +290,5 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
     <script src="main.js"></script>
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
