--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <a href="https://soupinnerhtml.github.io/coffee/">Coffee</a>
+<a href="https://soupinnerhtml.github.io/merkury/">Merkury</a>
+<a href="https://soupinnerhtml.github.io/startbootstrap-creative-gh-pages/">Startbootstrap</a>
