--- a/coffee/index.html
+++ b/coffee/index.html
@@ -227,7 +227,7 @@
 
     <footer class="d-flex">
         <div class="my-auto d-flex justify-content-between container p-0">
-            <span class="fadeInLeft wow">© Copyright @Junaed 2016, All rights reserved.</span>
+            <span class="fadeInLeft wow">Copyright © 2018 - 2019 - Zack</span>
 
             <div class="social-icons mt-3 mt-xl-0 fadeInRight wow">
                 <a href="#" class='i-1 mr-3'></a>
